--- a/Criando o primeiro App/agenda/app/src/main/res/values/strings.xml
+++ b/Criando o primeiro App/agenda/app/src/main/res/values/strings.xml
@@ -2,7 +2,10 @@
     <string name="app_name">Agenda</string>
     <string name="cadastro_nome">Nome</string>
     <string name="cadastro_idade">Idade</string>
-    <string name="cadastrar_btn">cadastrar</string>
+    <string name="cadastrar">cadastrar</string>
     <string name="list_name">João da silva</string>
     <string name="list_idade">18</string>
+    <string name="remover">Remover</string>
+    <string name="salvar_aluno">Salvar o aluno</string>
+    <string name="todo">TODO</string>
 </resources>
